# Sahara

./: .gitignore
.kiro/specs/responsive-ui-login/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/routers/: auth.py  organizations.py  ratings.py  realtime.py  requests.py  volunteers.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: entities.py  schemas.py
backend/app/repositories/: citizen_repository.py  organization_repository.py  rating_repository.py  request_repository.py  user_repository.py  volunteer_repository.py
backend/app/services/: ai_service.py  messaging_service.py  queue_service.py  storage_service.py
backend/app/services/text_extraction/: __init__.py  ner_extraction.py  newspaper_extraction.py  ocr_extraction.py  pipeline.py  text_cleaning.py
backend/migrations/: 001_initial_schema.py  002_add_citizen_profiles.py
context/urls/: backend-endpoints.md  endpoint-comparison.md  frontend-endpoints.md
frontend/: components.json  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AuthCard.jsx  AuthTabs.jsx  AuthenticitySection.jsx  CustomCursor.jsx  ForgotPasswordModal.jsx  GoogleAuthButton.jsx  HeroPanel.jsx  HeroSection.jsx  LandingFooter.jsx  LoginForm.jsx  Navbar.jsx  OpportunitiesSection.jsx  PageLoader.jsx  PasswordField.jsx  ProtectedRoute.jsx  RatingComponent.jsx  RatingDisplay.jsx  SignUpForm.jsx  StatsSection.jsx
frontend/src/hooks/: useFadeInOnScroll.js
frontend/src/pages/: CreateRequestPage.jsx  DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  MyComplaintsPage.jsx  OrganizationsPage.jsx  ProfilePage.jsx  RequestDetailsPage.jsx  RequestsPage.jsx  SettingsPage.jsx  VolunteerProfileSetupPage.jsx
frontend/src/services/: api.js  authService.js  (+4 more)
text_extraction/: ner_extraction.py  newspaper_extraction.py  newspaper_extraction_better.py  ocr_extraction.py  pipeline.py  text_cleaning.py
(+28 files in other folders)
