[project]
name = "volunteer-matching-backend"
version = "0.1.0"
description = "FastAPI backend for Sahara"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "asyncpg==0.29.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "httpx==0.25.1",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "email-validator>=2.3.0",
    "boto3>=1.34.0",
    "google-generativeai>=0.3.0",
    "spacy>=3.7.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "pdf2image>=1.17.0",
    "argon2-cffi",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "pyproject.toml" }
